--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://hjinyyyy.github.io/react_SinglePageApplication/",
   "name": "scoreboard",
   "version": "0.1.0",
   "private": true,
@@ -38,7 +39,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.0.1",
+    "gh-pages": "^2.2.0",
     "node-sass": "^4.14.1"
   }
 }
